--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -9,15 +9,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.joseph.yipandroid3.CompassActivity">
 
+    <MultiAutoCompleteTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/addressSearch"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:hint="Search an Address"
+        android:layout_alignRight="@+id/compass"
+        android:layout_alignEnd="@+id/compass" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:id="@+id/compass"
-        android:layout_alignParentTop="false"
         android:layout_alignParentLeft="false"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="false"
         android:layout_alignParentEnd="true"
         android:src="@drawable/compass"
-        android:contentDescription="@string/compass_descript" />
+        android:contentDescription="@string/compass_descript"
+        android:layout_below="@+id/addressSearch" />
+
 </RelativeLayout>
