--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -9,16 +9,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.joseph.yipandroid3.CompassActivity">
 
-    <MultiAutoCompleteTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/addressSearch"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:hint="Search an Address"
-        android:layout_alignRight="@+id/compass"
-        android:layout_alignEnd="@+id/compass" />
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
@@ -28,18 +18,17 @@
         android:layout_alignParentRight="false"
         android:layout_alignParentEnd="true"
         android:src="@drawable/compass"
-        android:contentDescription="@string/compass_descript"
-        android:layout_below="@+id/addressSearch" />
+        android:contentDescription="@string/compass_descript" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <fragment
-            android:id="@+id/autocomplete_fragment"
-            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    <fragment
+        android:id="@+id/autocomplete_fragment"
+        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     </android.support.v7.widget.CardView>
 
